# PrefXplain

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  Makefile  NOTICE  README.md  TODOS.md  install.sh  pyproject.toml  setup
commands/: prefxplain-create.md  prefxplain-show.md  prefxplain-update.md  prefxplain.md
prefxplain/: __init__.py  analyzer.py  checker.py  cli.py  describer.py  diagram.py  exporter.py  graph.py  mcp_server.py  preview_server.py  renderer.py
prefxplain-vscode/: README.md  package-lock.json  package.json  tsconfig.json
prefxplain-vscode/src/: extension.ts
prefxplain/agents/: prefxplain-worker.md  prefxplain-worker.toml
prefxplain/commands/: prefxplain-update.md  prefxplain.md
prefxplain/copilot_plugin/: plugin.json
prefxplain/copilot_plugin/commands/: prefxplain.md
prefxplain/copilot_plugin/skills/prefxplain/: SKILL.md
prefxplain/rendering/: __init__.py  assets.py  html_shell.py
prefxplain/rendering/js/: graph-utils.js  ir.js  layout.js  main.js  post.js  tokens.js
prefxplain/rendering/js/components/: card-file.js  card-hero.js  edge.js  group-container.js  group-detail-chrome.js
prefxplain/rendering/js/ui/: code-editor.js  flow-modal.js  legend.js  minimap.js  sidebar.js  top-panel.js  view-switcher.js
prefxplain/rendering/js/views/: group-map.js  nested.js
scripts/: open-in-ide.sh
tests/: test_analyzer.py  test_checker.py  test_cli.py  test_config_nodes.py  test_describer.py  test_edge_cases.py  test_exporter.py  test_graph_analysis.py  test_label_placement.mjs  test_new_features.py  test_preview_server.py  test_renderer.py  test_semantic_diagram.py
