[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prefxplain"
version = "0.1.0"
description = "Understand your codebase. Visual dependency maps + natural language descriptions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "PrefXplain Contributors" }]
keywords = ["codebase", "visualization", "dependency-graph", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9",
    "rich>=13",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/prefxplain"
Repository = "https://github.com/your-org/prefxplain"

[project.scripts]
prefxplain = "prefxplain.cli:entry_point"

[tool.setuptools.packages.find]
where = ["."]
include = ["prefxplain*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
