[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prefxplain"
version = "0.3.0"
description = "Explain your codebase in 30 seconds. Interactive architecture diagrams with AI descriptions, health scoring, and blast radius analysis. Works with Claude Code, Codex, Copilot CLI, and Gemini CLI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "PrefXplain Contributors" }]
keywords = [
    "codebase-visualization", "dependency-graph", "architecture-diagram",
    "code-review", "claude-code", "codex", "copilot-cli", "gemini-cli",
    "agent-skill", "ai-documentation", "code-understanding",
    "technical-debt", "cycle-detection", "import-analysis",
    "vscode-extension", "interactive-graph", "code-map", "onboarding",
    "developer-tools", "static-analysis", "mcp-server",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9",
    "rich>=13",
]

[project.optional-dependencies]
agent = ["mcp>=1.0"]
llm = ["openai>=1.0"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "openai>=1.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/PrefOptimize/PrefXplain"
Repository = "https://github.com/PrefOptimize/PrefXplain"
Issues = "https://github.com/PrefOptimize/PrefXplain/issues"

[project.scripts]
prefxplain = "prefxplain.cli:entry_point"

[tool.setuptools.packages.find]
where = ["."]
include = ["prefxplain*"]

[tool.setuptools.package-data]
prefxplain = [
    "commands/*.md",
    "copilot_plugin/plugin.json",
    "copilot_plugin/skills/*/SKILL.md",
    "vscode_extension/*.vsix",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP045"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov=prefxplain --cov-report=term-missing"
